# LeLaN_for_futuringrobot

./: .gitignore  GPT_answer.md  README.html  README.md  原始repo的README.md
deployment/: README_ros2_jazzy.md  download_weights.sh  package.xml  setup.cfg  setup.py
deployment/config/ros2/: camera_front.yaml  joy_driver.yaml  twist_mux_topics.yaml
deployment/launch/: vint_locobot.launch.py
deployment/lelan_deployment/: __init__.py  cmd_vel_mux.py  create_topomap.py  explore.py  joy_teleop.py  lelan_policy_col.py  navigate.py  navigate_lelan.py  paths.py  pd_controller.py  pd_controller_lelan.py  ros_data.py  topic_names.py  utils.py
deployment/resource/: lelan_deployment
deployment/src/: create_topomap.sh  explore.sh  joy_teleop.sh  lelan_inference_server.py  lelan_policy_col.py  lelan_runtime.py  navigate.sh  record_bag.sh  utils.py
download_youtube/: save_youtube_image.py
lelan_ros2/: package.xml  setup.cfg  setup.py
lelan_ros2/launch/: lelan_policy.launch.py
lelan_ros2/lelan_ros2/: __init__.py  lelan_policy_node.py
lelan_ros2/resource/: lelan_ros2
train/: train.py  train_lelan.yml
train/lelan/: __init__.py
train/lelan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
train/vint_train/data/: lelan_dataset.py
train/vint_train/models/lelan/: lelan.py  lelan_comp.py
train/vint_train/training/: train_utils.py
